--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Snake Game</h1>
+
+    <label for="difficulty">Choose Difficulty:</label>
+    <select id="difficulty">
+        <option value="150">Easy</option>
+        <option value="100" selected>Normal</option>
+        <option value="50">Hard</option>
+    </select>
+
     <canvas id="gameCanvas" width="400" height="400"></canvas>
 
     <div class="controls">
